[package]
name = "libp2p-webtransport-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport = { version = "0.6.1", features = ["quinn"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["tokio", "noise", "macros", "ed25519"] }
futures = "0.3.28"
tracing = "0.1"
thiserror = "1.0"
url = "2.4.0"
sha2 = "0.10.8"
tokio-util = { version = "0.7", features = ["compat"] }
rcgen = "0.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.73"

[dev-dependencies]
env_logger = "0.10"
futures-util = "0.3.30"
